<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_homescreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ruggedoutdoors.cleanwater.HomescreenActivity">

    <TextView
        android:text="@string/homescreen_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/homescreenText" />

    <Button
    android:text="@string/logout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:id="@+id/logoutButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/edit_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editUserButton"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/homescreenText"
        android:layout_alignEnd="@+id/homescreenText" />

    <Button
        android:text="@string/file_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fileReportButton"
        android:layout_below="@+id/editUserButton"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
